deploy/k8s/monsters/monster-combat-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: monster-combat
    prometheus: 'true'
    type: spring-actuator
  name: combat
  namespace: ebullientworks
spec:
  type: ClusterIP
  ports:
  - name: spring-web
    port: 8080
    targetPort: spring-web
  selector:
    app: monster-combat
