deploy/k8s/monsters/spring-micrometer.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ebullientworks
  labels:
    app.kubernetes.io/name: mc-spring-micrometer
    app.kubernetes.io/version: latest
    prometheus: 'true'
    type: mc-spring
  name: mc-spring-micrometer
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/name: mc-spring-micrometer
    app.kubernetes.io/version: latest
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ebullientworks
  labels:
    app.kubernetes.io/name: mc-spring-micrometer
    app.kubernetes.io/version: latest
  name: mc-spring-micrometer
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mc-spring-micrometer
      app.kubernetes.io/version: latest
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mc-spring-micrometer
        app.kubernetes.io/version: latest
    spec:
      containers:
      - image: ebullient/mc-spring5-micrometer:latest
        imagePullPolicy: IfNotPresent
        name: mc-spring-micrometer
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: http
          initialDelaySeconds: 10
        livenessProbe:
          httpGet:
            path: /liveness
            port: http
          initialDelaySeconds: 40
